--- a/src/skiprows.ipynb
+++ b/src/skiprows.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,6 +746,39 @@
     "train['click_time'] = pd.to_datetime(train['click_time'])\n",
     "train['attributed_time'] = pd.to_datetime(train['attributed_time'])\n",
     "train.describe(include='all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  9 11 12 13 14 15 17 18 20 21 22 23 24 26 27 28 29\n",
+      " 30 31 32 33 34 35 37 38 39 40 41 42 44 45 47 48 49 50 51 52 54 55 57 59\n",
+      " 60 61 62 63 64 65 66 67 68 69 71 72 73 74 75 76 77 78 79 81 82 83 84 85\n",
+      " 89 91 92 93 94 95 96 99]\n",
+      "[ 8 10 16 19 25 36 43 46 53 56 58 70 80 86 87 88 90 97 98]\n",
+      "[ 8 43 53 56 70]\n",
+      "(85,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "rng = np.arange(1, 100)\n",
+    "skip = np.random.choice(rng, size=80, replace=False)\n",
+    "print(np.sort(skip))\n",
+    "\n",
+    "rng_skipped = np.setdiff1d(rng, skip)\n",
+    "print(np.sort(rng_skipped))\n",
+    "\n",
+    "target = np.random.choice(rng_skipped, size=5, replace=False)\n",
+    "print(np.sort(target))\n",
+    "\n",
+    "print(np.hstack((target, skip)).shape)\n"
    ]
   },
   {
